--- a/appstate.json
+++ b/appstate.json
@@ -1,7 +1,137 @@
-....
-
-
-        𝐚dd 𝐲𝐨𝐮𝐫 𝐜𝟑𝐜 𝐅𝐛𝐬𝐭𝐚𝐭𝐞 𝐜𝐨𝐨𝐤𝐢𝐞 🍪
-
-
-.....
+[
+    {
+        "key": "dbln",
+        "value": "%7B%2261579619529543%22%3A%22oQT6vDNa%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2025-08-24T14:16:18.172Z",
+        "lastAccessed": "2025-08-24T14:16:18.173Z"
+    },
+    {
+        "key": "datr",
+        "value": "Qnw3Z9IcUGig0lWbNq54vzYo",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-24T14:16:18.173Z",
+        "lastAccessed": "2025-08-24T14:16:18.173Z"
+    },
+    {
+        "key": "sb",
+        "value": "Qnw3Z3BmzZYIX8O-adCb--qI",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-24T14:16:18.173Z",
+        "lastAccessed": "2025-08-24T14:16:18.173Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-24T14:16:18.173Z",
+        "lastAccessed": "2025-08-24T14:16:18.173Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-24T14:16:18.173Z",
+        "lastAccessed": "2025-08-24T14:16:18.173Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B1047x562x1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-24T14:16:18.173Z",
+        "lastAccessed": "2025-08-24T14:16:18.173Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "0.8578969836235046",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-24T14:16:18.173Z",
+        "lastAccessed": "2025-08-24T14:16:18.173Z"
+    },
+    {
+        "key": "wd",
+        "value": "562x1249",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-24T14:16:18.173Z",
+        "lastAccessed": "2025-08-24T14:16:18.173Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61579619529543",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-24T14:16:18.173Z",
+        "lastAccessed": "2025-08-24T14:16:18.173Z"
+    },
+    {
+        "key": "xs",
+        "value": "1%3AUpBpJ0MTsYbmfQ%3A2%3A1756044946%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-24T14:16:18.173Z",
+        "lastAccessed": "2025-08-24T14:16:18.173Z"
+    },
+    {
+        "key": "fr",
+        "value": "0O02CgjjJJvxBki95.AWfI7uhLoHsoWAHFFlmHUhzYKVigcXeLAqKTX6WfgxHy7YDblTc.Bohjeg..AAA.0.0.Boqx6g.AWc2OGIDvcvJfgWA9y-bHtMKzQU",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-24T14:16:18.173Z",
+        "lastAccessed": "2025-08-24T14:16:18.173Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_GB",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-24T14:16:18.173Z",
+        "lastAccessed": "2025-08-24T14:16:18.173Z"
+    },
+    {
+        "key": "pas",
+        "value": "100081599913879%3A1VUK3kpUoi%2C61579619529543%3AUXv0a5f6l8",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-24T14:16:18.173Z",
+        "lastAccessed": "2025-08-24T14:16:18.173Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2901%3Btimestamp%3A1756044960",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-24T14:16:18.173Z",
+        "lastAccessed": "2025-08-24T14:16:18.173Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "100626807%3BT%3A29267416",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-24T14:16:18.173Z",
+        "lastAccessed": "2025-08-24T14:16:18.173Z"
+    }
+]
